--- a/05_correlation/_slides/index.html
+++ b/05_correlation/_slides/index.html
@@ -1264,7 +1264,7 @@ plt.savefig('images/pearson_outlier.png', bbox_inches="tight")
 <ul>
 <li class="fragment">Wichtig: das Vorzeichen hängt davon ab, in welcher Reihenfolge die beiden Variablen in die Vierfeldertafel eingetragen werden.
 <ul>
-<li class="fragment">Übung für zu Hause: das Vorzeichen von <span class="math inline">\(\phi\)</span> dreht sich um, wenn die Spalten male/female vertauscht werden, und ebenso, wenn die Spalten smoker/nonsmoker vertauscht werden. Warum?</li>
+<li class="fragment">Übung für zu Hause: das Vorzeichen von <span class="math inline">\(\phi\)</span> dreht sich um, wenn die Spalten male/female vertauscht werden, und ebenso, wenn die Zeilen smoker/nonsmoker vertauscht werden. Warum?</li>
 </ul></li>
 <li class="fragment">Wie alle Korrelationskoeffizienten hat auch der Phi-Koeffizient einen Wertebereich von <span class="math inline">\([-1; 1]\)</span>.</li>
 </ul>
@@ -1282,7 +1282,7 @@ plt.savefig('images/pearson_outlier.png', bbox_inches="tight")
 <ul>
 <li class="fragment">Hier ist für das Vorzeichen entscheidend, welche Ausprägung als 0 und welche als 1 definiert wird (analog der Eintrage-Reihenfolge in die Vierfeldertafel).</li>
 <li class="fragment">In der Praxis findet der Phi-Koeffizient wenig Anwendung, da der Zusammenhang zumeist intuitiver in Form von Häufigkeiten berichtet wird (z.B. Raucherhäufigkeit bei Männern versus Frauen).</li>
-<li class="fragment">Der vielleicht einzige Vorteil des Phi-Koeffizienten ist, dass keine Festlegung erfolgen muss, ob die Raucherhäufigkeit zwischen den Geschlechtern berichtet oder die Geschlechterhäufigkeit zwischen Rauchern und Nichtrauchern wird.</li>
+<li class="fragment">Der vielleicht einzige Vorteil des Phi-Koeffizienten ist, dass keine Festlegung erfolgen muss, ob die Raucherhäufigkeit zwischen den Geschlechtern, oder die Geschlechterhäufigkeit zwischen Rauchern und Nichtrauchern berichtet wird.</li>
 <li class="fragment">Zudem macht der Phi-Koeffizient in konzeptioneller Hinsicht den Punkt zu Beginn der Vorlesung deutlich, dass jeder Unterschied (z.B. Raucherhäufigkeit bei Männern versus Frauen) auch als Zusammenhang (Zusammenhang von Geschlecht und Raucherstatus) formuliert werden kann.</li>
 <li class="fragment">In diesem Sinne ist der Phi-Koeffizient ein Beispiel für einen <strong>Zusammenhang im weiteren Sinne</strong>.</li>
 </ul>
