--- a/23ws/10_significance_testing/_slides/index.html
+++ b/23ws/10_significance_testing/_slides/index.html
@@ -694,14 +694,14 @@ se_A^2 = \frac{\sigma_A^2}{n_A}\qquad\qquad se_B^2 = \frac{\sigma_B^2}{n_B}
 <div class="fragment">
 <p>Nun sind wir ja an der Differenz der Mittelwerte <span class="math inline">\(\Delta\bar{x}\)</span> interessiert. Allgemein gilt, dass sich die Varianzen von Summen oder Differenz zweier unabhängiger Zufallsvariablen addieren:</p>
 <p><span class="math display">\[
-se^2 = se_A^2 + se_B^2 = \frac{\sigma_A^2}{n_A} + \frac{\sigma_A^2}{n_B}
+se^2 = se_A^2 + se_B^2 = \frac{\sigma_A^2}{n_A} + \frac{\sigma_B^2}{n_B}
 \]</span></p>
 </div>
 <div class="fragment">
 <p>Daher gilt für den <strong>Standardfehler der Mittelwertsdifferenz unabhängiger Gruppen A und B</strong>:</p>
 <div style="margin-top: -10px">
 <p><span class="math display">\[
-se = \sqrt{\frac{\sigma_A^2}{n_A} + \frac{\sigma_A^2}{n_A}}
+se = \sqrt{\frac{\sigma_A^2}{n_A} + \frac{\sigma_B^2}{n_B}}
 \]</span></p>
 </div>
 </div>
@@ -764,7 +764,7 @@ se = \frac{\sigma_\Delta}{\sqrt{n}}\qquad\text{mit}\qquad \sigma_\Delta=\sqrt{\f
 </tr>
 <tr class="even">
 <td><strong>Mittelwertdifferenz <u>zweier unabhängiger Gruppen</u> A und B (unterschiedliche Varianzen)</strong></td>
-<td><span class="math inline">\(se = \sqrt{\frac{\sigma_A^2}{n_A} + \frac{\sigma_A^2}{n_A}}\)</span></td>
+<td><span class="math inline">\(se = \sqrt{\frac{\sigma_A^2}{n_A} + \frac{\sigma_B^2}{n_B}}\)</span></td>
 </tr>
 </tbody>
 </table>
