--- a/23ws/11_ttest/_slides/index.html
+++ b/23ws/11_ttest/_slides/index.html
@@ -921,7 +921,7 @@ Falls <span class="math inline">\(n_A=n_B=n\)</span>: <span class="math inline">
 <div class="vspace-small">
 
 </div>
-<p><u>Fall 1: Sind die Varianzen gleich</u>, d.h. <span class="math inline">\(\hat{\sigma}_A=\hat{\sigma}_B\)</span>, so vereinfacht sich die Formel zu</p>
+<p><u>Fall 1: Sind die Varianzen gleich</u> (entgegen der Annahme), d.h. <span class="math inline">\(\hat{\sigma}_A=\hat{\sigma}_B\)</span>, so vereinfacht sich die Formel zu</p>
 <p><span class="math display">\[
 \text{df} = (n-1)(1+\frac{2}{2}) = 2n -2,
 \]</span></p>
