--- a/23ws/07_effectsize/_slides/index.html
+++ b/23ws/07_effectsize/_slides/index.html
@@ -761,7 +761,7 @@ s^2_\text{pooled} = \frac{n_A\cdot s^2_A + n_B\cdot s^2_B}{n_A+n_B}
 <div class="fragment">
 <p><span class="math display">\[
 \scriptsize{
-\hat{\sigma}_\text{pooled} = \sqrt{\frac{(n_A-1)\hat{\sigma}_A^2 + (n_B-1)\hat{\sigma}_B^2}{n_A+n_B-2}}\qquad\qquad\text{Falls }n_A=n_B=n:\;\; \hat{\sigma}_\text{pooled} = \sqrt{\frac{\hat{\sigma}_A^2 + \hat{\sigma}_B^2}{2\left(1-\frac{1}{n}\right)}}
+\hat{\sigma}_\text{pooled} = \sqrt{\frac{(n_A-1)\hat{\sigma}_A^2 + (n_B-1)\hat{\sigma}_B^2}{n_A+n_B-2}}\qquad\qquad\text{Falls }n_A=n_B=n:\;\; \hat{\sigma}_\text{pooled} = \sqrt{\frac{\hat{\sigma}_A^2 + \hat{\sigma}_B^2}{2}}
 }
 \]</span></p>
 </div>
